# phone-calling-agent

./: .cursorrules  .gitignore  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_SPECIFICATIONS.md  env.example.txt  pyproject.toml
scripts/: seed_data.py  setup_pinecone.py
src/: __init__.py  config.py
src/agents/: __init__.py  prompts.py  tools.py  voice_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  voice.py  webhooks.py
src/api/schemas/: __init__.py
src/audio/: __init__.py  processor.py  stt.py  tts.py
src/database/: __init__.py  models.py  pinecone_client.py
src/models/: __init__.py  embeddings.py  provider.py
src/services/: __init__.py  call_service.py  search_service.py  twilio_service.py
src/utils/: __init__.py  errors.py  logging.py  monitoring.py
tests/: conftest.py
tests/integration/: test_database.py  test_voice_pipeline.py
tests/unit/: test_api.py  test_config.py  test_services.py  test_stt.py  test_tts.py
